vlib/v/checker/tests/invalid_none_operations_err.vv
println(none + none)
println(none - none)
println(none * none)
println(none / none)
println(none % none)
println(none ^ none)
println(none << none)
println(none >> none)
println(none == none)
println(none != none)
println(none > none)
println(none < none)
println(none >= none)
println(none <= none)
println(none && none)
println(none || none)
println(none is none)
println(none !is none)
println(none in none)
println(none !in none)
println(none <- none)

for _ in none .. none {
}
